# sokoban

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  appcore.cpp  appcore.h  main.cpp
app/src/main/cpp/core/: commandhandler.h  commandmanager.cpp  commandmanager.h  eventlistener.cpp  eventlistener.h  eventmanager.cpp  eventmanager.h  imanager.h  task.h  taskmanager.cpp  taskmanager.h  timer.h
app/src/main/cpp/game/: factory.cpp  factory.h  field.cpp  field.h  manager.cpp  manager.h
app/src/main/cpp/game/objects/: box.cpp  box.h  dude.cpp  dude.h  object.h  space.h  target.h  wall.h
app/src/main/cpp/graphics/: Shader_2D_src.cpp  Shader_3D_src.cpp  Shader_SRC.cpp  camera.cpp  camera.h  renderer.cpp  renderer.h  shader.cpp  shader.h  textureasset.cpp  textureasset.h  utility.cpp
app/src/main/cpp/graphics/models/: basemodel.h  mesh.h  sprite.h
app/src/main/cpp/ui/: factory.cpp  factory.h  json.cpp  ui.cpp  ui.h
app/src/main/cpp/ui/widgets/: button.cpp  button.h  desktop.cpp  desktop.h  image.cpp  image.h  widget.cpp  widget.h  window.cpp  window.h
app/src/main/java/com/example/sokoban/: MainActivity.java
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
